style: add header menu

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,3 +1,15 @@
-<header>
-  <div class="menu-text">Collection</div>
+<header class="header">
+  <div class="flex sb aac">
+    <img src="img/logo.png" alt="">
+    <nav class="header__nav">
+      <ul class="header__menu">
+        <li class="header__menu-item"><a href="" class="header__link menu-text">Collection</a></li>
+        <li class="header__menu-item"><a href="" class="header__link menu-text">Content</a></li>
+        <li class="header__menu-item"><a href="" class="header__link menu-text">Roadmap</a></li>
+        <li class="header__menu-item"><a href="" class="header__link menu-text">Team</a></li>
+      </ul>
+    </nav>
+  </div>
+
+  <a href="#" class="btn"></a>
 </header>
