style: add main section

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="flex sb aac">
-    <img src="img/logo.png" alt="">
+    <a href=""><img src="img/logo.png" alt=""></a>
     <nav class="header__nav">
       <ul class="header__menu">
         <li class="header__menu-item"><a href="" class="header__link menu-text">Collection</a></li>
