--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,24 @@
 <body>
 	@@include('html/header.html',{})
 	<main>
-		<div class="container">
+		<section class="main relative">
+			<div class="menu-text relative margin-auto "> <img src="img/section-circle-brown.png" alt="" class="circle"> NFT
+				Collection</div>
 			<h1 class="h1">Bored <br>NFT Peeps</h1>
-			<p class="paragraphs">Tempor interdum sed nisl aliquam ut orci feugiat neque. Nibh amet proin in tristique. Ipsum
+			<p class="paragraphs main__text">Tempor interdum sed nisl aliquam ut orci feugiat neque. Nibh amet proin in
+				tristique. Ipsum
 				morbi adipiscing faucibus eu odio in tellus risus.</p>
-			<div class="line"></div>
+			<a href="" class="btn">OpenSea</a>
+			<img src="img/big-circle-left.png" alt="" class="absolute  main__circle-left">
+			<img src="img/main-1.png " alt="" class="absolute  main__hero-left">
+			<img src="img/pattern-1.png" alt="" class="absolute  main__pattern-left">
+			<img src="img/big-circle-right.png" alt="" class="absolute  main__circle-right">
+			<img src="img/main-2.png " alt="" class="absolute  main__hero-right">
+			<img src="img/pattern-2.png" alt="" class="absolute  main__pattern-right">
+		</section>
+		<div class="container">
+
+
 		</div>
 
 	</main>
