style: add meet-section

--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,47 @@
 			<img src="img/main-2.png " alt="" class="absolute  main__hero-right">
 			<img src="img/pattern-2.png" alt="" class="absolute  main__pattern-right">
 		</section>
-		<div class="container">
+
+		<section class="meet-section container">
+			<div class="menu-text relative margin-auto "> <img src="img/section-circle-brown.png" alt="" class="circle">
+				Collection</div>
+			<h1 class="h2">Meet Our Bored Peeps!</h1>
+
+			<div class="flex sb">
+				<div class="meet-section__text">
+					<h3 class="subtitle">
+						6500 Bored Peeps</h3>
+					<p class="paragraphs meet-section__paragraphs">Tempor interdum sed nisl aliquam ut orci feugiat neque. Nibh
+						amet proin in tristique.
+						Ipsum morbi adipiscing faucibus eu odio in tellus risus.</p>
+					<div class="line meet-section__line"></div>
+
+					<h3 class="subtitle">
+						6500 Bored Peeps</h3>
+					<p class="paragraphs meet-section__paragraphs">Tempor interdum sed nisl aliquam ut orci feugiat neque.
+						Nibh
+						amet proin in tristique.
+						Ipsum morbi adipiscing faucibus eu odio in tellus risus.</p>
+					<div class="line meet-section__line"></div>
+
+					<h3 class="subtitle">
+						6500 Bored Peeps</h3>
+					<p class="paragraphs meet-section__paragraphs">Tempor interdum sed nisl aliquam ut orci feugiat neque.
+						Nibh
+						amet proin in tristique.
+						Ipsum morbi adipiscing faucibus eu odio in tellus risus.</p>
 
 
-		</div>
+
+				</div>
+				<div class="meet-section__image">
+					<img src="img/team.png" alt="">
+				</div>
+			</div>
+		</section>
+		<section class="content-section">
+		</section>
+
 
 	</main>
 	@@include('html/footer.html',{})
