--- a/src/index.html
+++ b/src/index.html
@@ -23,30 +23,32 @@
 			<img src="img/pattern-2.png" alt="" class="absolute  main__pattern-right">
 		</section>
 
-		<section class="meet-section container">
-			<div class="menu-text relative margin-auto "> <img src="img/section-circle-brown.png" alt="" class="circle">
-				Collection</div>
-			<h1 class="h2">Meet Our Bored Peeps!</h1>
+		<section class="meet-section container ">
+			<div class="relative margin-auto"> <img src="img/section-circle-brown.png" alt="" class="circle">
+				<div class="menu-text content-section__text ">Collection
+				</div>
+			</div>
+			<h2 class="h2">Meet Our Bored Peeps!</h2>
 
 			<div class="flex sb">
 				<div class="meet-section__text">
-					<h3 class="subtitle">
-						6500 Bored Peeps</h3>
+					<h4 class="subtitle">
+						6500 Bored Peeps</h4>
 					<p class="paragraphs meet-section__paragraphs">Tempor interdum sed nisl aliquam ut orci feugiat neque. Nibh
 						amet proin in tristique.
 						Ipsum morbi adipiscing faucibus eu odio in tellus risus.</p>
 					<div class="line meet-section__line"></div>
 
-					<h3 class="subtitle">
-						6500 Bored Peeps</h3>
+					<h4 class="subtitle">
+						Mint Price & Date</h4>
 					<p class="paragraphs meet-section__paragraphs">Tempor interdum sed nisl aliquam ut orci feugiat neque.
 						Nibh
 						amet proin in tristique.
 						Ipsum morbi adipiscing faucibus eu odio in tellus risus.</p>
 					<div class="line meet-section__line"></div>
 
-					<h3 class="subtitle">
-						6500 Bored Peeps</h3>
+					<h4 class="subtitle">
+						Why Bored Peeps</h4>
 					<p class="paragraphs meet-section__paragraphs">Tempor interdum sed nisl aliquam ut orci feugiat neque.
 						Nibh
 						amet proin in tristique.
@@ -61,8 +63,39 @@
 			</div>
 		</section>
 		<section class="content-section">
-		</section>
+			<div class="container">
+				<div class="relative">
+					<div class="menu-text content-section__text">Rarity</div>
+					<img src="img/section-circle-orange.png" alt="" class="circle">
+				</div>
+				<h2 class="h2">Exclusive Content</h2>
+				<div class="rarity relative">
+					<div class="line rarity__line"></div>
+					<div class="rarity__content flex sb">
+						<div class="rarity__text">
+							<h3 class="h3 rarity__h3">Common</h3>
+							<div class="rarity__tier-box flex aac">
+								<div class="rarity__tier">Tier 1</div>
+								<div class="rarity__rate-box aac">
+									<img src="img/section-circle-orange.png" alt="" class="rarity__rate-img">
+									<img src="img/section-circle-brown.png" alt="" class="rarity__rate-img">
+									<img src="img/section-circle-brown.png" alt="" class="rarity__rate-img">
+									<img src="img/section-circle-brown.png" alt="" class="rarity__rate-img">
+									<img src="img/section-circle-brown.png" alt="" class="rarity__rate-img">
+								</div>
+							</div>
+							<div class="paragraphs">Diam vestibulum mattis aliquam, urna condimentum id. Ultrices sit tincidunt diam
+								integer amet, nec facilisis nec mi. Faucibus posuere turpis commodo leo ipsum magnis.</div>
+						</div>
+						<img src="img/content-1.png" alt="" class="rarity__image">
+					</div>
 
+				</div>
+				<div class="line rarity__line"></div>
+			</div>
+
+
+		</section>
 
 	</main>
 	@@include('html/footer.html',{})
