--- a/src/index.html
+++ b/src/index.html
@@ -25,46 +25,50 @@
 			<img src="img/pattern-2.png" alt="" class="absolute  main__pattern-right">
 		</section>
 
-		<section class="meet-section container ">
-			<div class="relative "> <img src="img/section-circle-brown.png" alt="" class="circle circle--center">
-				<div class="menu-text content-section__text margin-auto">Collection
+		<section class="meet-section relative">
+			<div class="container">
+				<div class="relative "> <img src="img/section-circle-brown.png" alt="" class="circle circle--center">
+					<div class="menu-text content-section__text margin-auto">Collection
+					</div>
 				</div>
+				<h2 class="h2">Meet Our Bored Peeps!</h2>
+
+				<div class="flex sb">
+					<div class="meet-section__text">
+						<h4 class="subtitle">
+							6500 Bored Peeps</h4>
+						<p class="paragraphs meet-section__paragraphs">Tempor interdum sed nisl aliquam ut orci feugiat neque. Nibh
+							amet proin in tristique.
+							Ipsum morbi adipiscing faucibus eu odio in tellus risus.</p>
+						<div class="line meet-section__line"></div>
+
+						<h4 class="subtitle">
+							Mint Price & Date</h4>
+						<p class="paragraphs meet-section__paragraphs">Tempor interdum sed nisl aliquam ut orci feugiat neque.
+							Nibh
+							amet proin in tristique.
+							Ipsum morbi adipiscing faucibus eu odio in tellus risus.</p>
+						<div class="line meet-section__line"></div>
+
+						<h4 class="subtitle">
+							Why Bored Peeps</h4>
+						<p class="paragraphs meet-section__paragraphs">Tempor interdum sed nisl aliquam ut orci feugiat neque.
+							Nibh
+							amet proin in tristique.
+							Ipsum morbi adipiscing faucibus eu odio in tellus risus.</p>
+
+
+
+					</div>
+					<div class="meet-section__image">
+						<img src="img/team.png" alt="">
+					</div>
+				</div>
+
 			</div>
-			<h2 class="h2">Meet Our Bored Peeps!</h2>
-
-			<div class="flex sb">
-				<div class="meet-section__text">
-					<h4 class="subtitle">
-						6500 Bored Peeps</h4>
-					<p class="paragraphs meet-section__paragraphs">Tempor interdum sed nisl aliquam ut orci feugiat neque. Nibh
-						amet proin in tristique.
-						Ipsum morbi adipiscing faucibus eu odio in tellus risus.</p>
-					<div class="line meet-section__line"></div>
-
-					<h4 class="subtitle">
-						Mint Price & Date</h4>
-					<p class="paragraphs meet-section__paragraphs">Tempor interdum sed nisl aliquam ut orci feugiat neque.
-						Nibh
-						amet proin in tristique.
-						Ipsum morbi adipiscing faucibus eu odio in tellus risus.</p>
-					<div class="line meet-section__line"></div>
-
-					<h4 class="subtitle">
-						Why Bored Peeps</h4>
-					<p class="paragraphs meet-section__paragraphs">Tempor interdum sed nisl aliquam ut orci feugiat neque.
-						Nibh
-						amet proin in tristique.
-						Ipsum morbi adipiscing faucibus eu odio in tellus risus.</p>
-
-
-
-				</div>
-				<div class="meet-section__image">
-					<img src="img/team.png" alt="">
-				</div>
-			</div>
+			<img src="img/wave-brown-top.png" alt="" class="wave">
 		</section>
-		<section class="content-section">
+		<section class="content-section relative">
 			<div class="container">
 				<div class="relative">
 					<div class="menu-text content-section__text">Rarity</div>
@@ -184,9 +188,12 @@
 				<div class="line rarity__line"></div>
 			</div>
 
-
+			<img src="img/wave-brown-bottom.png" alt="" class="wave wave--content">
 		</section>
+		<section class="roadmap relative">
 
+			hhh
+		</section>
 	</main>
 	@@include('html/footer.html',{})
 	<script src="js/app.min.js"></script>
