style: roadmap-item

--- a/src/index.html
+++ b/src/index.html
@@ -190,9 +190,75 @@
 
 			<img src="img/wave-brown-bottom.png" alt="" class="wave wave--content">
 		</section>
-		<section class="roadmap relative">
+		<section class="roadmap ">
 
-			hhh
+			<div class="container">
+				<div class="relative "> <img src="img/section-circle-pink.png" alt="" class="circle circle--center">
+					<div class="menu-text content-section__text margin-auto">Releases
+					</div>
+				</div>
+				<h2 class="h2 tac">Our Roadmap</h2>
+				<div class="roadmap-item relative">
+					<div class="roadmap-item__text">
+						Q1 2022
+						<h3 class="h3 roadmap-item__h3">Community DAO</h3>
+						<div class="paragraphs">
+							Diam vestibulum mattis aliquam, urna condimentum id. Ultrices sit tincidunt diam integer amet, nec
+							facilisis nec mi. Faucibus posuere turpis commodo leo ipsum magnis.</div>
+					</div>
+					<img src="img/big-pink-circle.png" alt="" class="roadmap-item__circle absolute">
+				</div>
+				<div class="roadmap-item relative">
+					<div class="roadmap-item__text">
+						Q1 2022
+						<h3 class="h3 roadmap-item__h3">Community DAO</h3>
+						<div class="paragraphs">
+							Diam vestibulum mattis aliquam, urna condimentum id. Ultrices sit tincidunt diam integer amet, nec
+							facilisis nec mi. Faucibus posuere turpis commodo leo ipsum magnis.</div>
+					</div>
+					<img src="img/big-pink-circle.png" alt="" class="roadmap-item__circle absolute">
+				</div>
+				<div class="roadmap-item relative">
+					<div class="roadmap-item__text">
+						Q1 2022
+						<h3 class="h3 roadmap-item__h3">Community DAO</h3>
+						<div class="paragraphs">
+							Diam vestibulum mattis aliquam, urna condimentum id. Ultrices sit tincidunt diam integer amet, nec
+							facilisis nec mi. Faucibus posuere turpis commodo leo ipsum magnis.</div>
+					</div>
+					<img src="img/big-pink-circle.png" alt="" class="roadmap-item__circle absolute">
+				</div>
+				<div class="roadmap-item relative">
+					<div class="roadmap-item__text">
+						Q1 2022
+						<h3 class="h3 roadmap-item__h3">Community DAO</h3>
+						<div class="paragraphs">
+							Diam vestibulum mattis aliquam, urna condimentum id. Ultrices sit tincidunt diam integer amet, nec
+							facilisis nec mi. Faucibus posuere turpis commodo leo ipsum magnis.</div>
+					</div>
+					<img src="img/big-pink-circle.png" alt="" class="roadmap-item__circle absolute">
+				</div>
+				<div class="roadmap-item relative">
+					<div class="roadmap-item__text">
+						Q1 2022
+						<h3 class="h3 roadmap-item__h3">Community DAO</h3>
+						<div class="paragraphs">
+							Diam vestibulum mattis aliquam, urna condimentum id. Ultrices sit tincidunt diam integer amet, nec
+							facilisis nec mi. Faucibus posuere turpis commodo leo ipsum magnis.</div>
+					</div>
+					<img src="img/big-pink-circle.png" alt="" class="roadmap-item__circle absolute">
+				</div>
+				<div class="roadmap-item relative">
+					<div class="roadmap-item__text">
+						Q1 2022
+						<h3 class="h3 roadmap-item__h3">Community DAO</h3>
+						<div class="paragraphs">
+							Diam vestibulum mattis aliquam, urna condimentum id. Ultrices sit tincidunt diam integer amet, nec
+							facilisis nec mi. Faucibus posuere turpis commodo leo ipsum magnis.</div>
+					</div>
+					<img src="img/big-pink-circle.png" alt="" class="roadmap-item__circle absolute">
+				</div>
+			</div>
 		</section>
 	</main>
 	@@include('html/footer.html',{})
