--- a/src/index.html
+++ b/src/index.html
@@ -198,67 +198,79 @@
 					</div>
 				</div>
 				<h2 class="h2 tac">Our Roadmap</h2>
+				<!-- 1st -->
 				<div class="roadmap-item relative">
 					<div class="roadmap-item__text">
 						Q1 2022
 						<h3 class="h3 roadmap-item__h3">Community DAO</h3>
+						<div class="paragraphs">
+							Diam vestibulum mattis aliquam, urna condimentum id. Ultrices sit tincidunt diam integer amet, nec
+							facilisis nec mi. Faucibus posuere turpis commodo leo ipsum magnis.</div>
+					</div>
+					<img src="img/big-pink-circle.png" alt="" class="roadmap-item__circle absolute">
+					<img src="img/pattern-1.png" alt="" class="roadmap-item__pattern absolute">
+				</div>
+				<!-- 2nd Opening Event -->
+				<div class="roadmap-item relative">
+					<div class="roadmap-item__text">
+						Q1 2022
+						<h3 class="h3 roadmap-item__h3">Opening Event</h3>
+						<div class="paragraphs">
+							Diam vestibulum mattis aliquam, urna condimentum id. Ultrices sit tincidunt diam integer amet, nec
+							facilisis nec mi. Faucibus posuere turpis commodo leo ipsum magnis.</div>
+					</div>
+					<img src="img/big-pink-circle.png" alt="" class="roadmap-item__circle absolute">
+					<img src="img/roadmap-1.png" alt="" class="roadmap-item__first-girl absolute">
+				</div>
+				<!-- 3rd Charity Donation -->
+				<div class="roadmap-item relative">
+					<div class="roadmap-item__text">
+						Q1 2022
+						<h3 class="h3 roadmap-item__h3">Charity Donation</h3>
 						<div class="paragraphs">
 							Diam vestibulum mattis aliquam, urna condimentum id. Ultrices sit tincidunt diam integer amet, nec
 							facilisis nec mi. Faucibus posuere turpis commodo leo ipsum magnis.</div>
 					</div>
 					<img src="img/big-pink-circle.png" alt="" class="roadmap-item__circle absolute">
 				</div>
+				<!-- 4th Rare Giveaways -->
 				<div class="roadmap-item relative">
 					<div class="roadmap-item__text">
 						Q1 2022
-						<h3 class="h3 roadmap-item__h3">Community DAO</h3>
+						<h3 class="h3 roadmap-item__h3">Rare Giveaways</h3>
+						<div class="paragraphs">
+							Diam vestibulum mattis aliquam, urna condimentum id. Ultrices sit tincidunt diam integer amet, nec
+							facilisis nec mi. Faucibus posuere turpis commodo leo ipsum magnis.</div>
+					</div>
+					<img src="img/big-pink-circle.png" alt="" class="roadmap-item__circle absolute">
+					<img src="img/pattern-2.png" alt="" class="roadmap-item__pattern-2 absolute">
+					<img src="img/roadmap-2.png" alt="" class="roadmap-item__girl-2 absolute">
+				</div>
+				<!-- 5th New Nfts -->
+				<div class="roadmap-item relative">
+					<div class="roadmap-item__text">
+						Q1 2022
+						<h3 class="h3 roadmap-item__h3">New Nfts</h3>
 						<div class="paragraphs">
 							Diam vestibulum mattis aliquam, urna condimentum id. Ultrices sit tincidunt diam integer amet, nec
 							facilisis nec mi. Faucibus posuere turpis commodo leo ipsum magnis.</div>
 					</div>
 					<img src="img/big-pink-circle.png" alt="" class="roadmap-item__circle absolute">
 				</div>
+				<!-- 6th Metaverse -->
 				<div class="roadmap-item relative">
 					<div class="roadmap-item__text">
 						Q1 2022
-						<h3 class="h3 roadmap-item__h3">Community DAO</h3>
+						<h3 class="h3 roadmap-item__h3">Metaverse</h3>
 						<div class="paragraphs">
 							Diam vestibulum mattis aliquam, urna condimentum id. Ultrices sit tincidunt diam integer amet, nec
 							facilisis nec mi. Faucibus posuere turpis commodo leo ipsum magnis.</div>
 					</div>
 					<img src="img/big-pink-circle.png" alt="" class="roadmap-item__circle absolute">
-				</div>
-				<div class="roadmap-item relative">
-					<div class="roadmap-item__text">
-						Q1 2022
-						<h3 class="h3 roadmap-item__h3">Community DAO</h3>
-						<div class="paragraphs">
-							Diam vestibulum mattis aliquam, urna condimentum id. Ultrices sit tincidunt diam integer amet, nec
-							facilisis nec mi. Faucibus posuere turpis commodo leo ipsum magnis.</div>
-					</div>
-					<img src="img/big-pink-circle.png" alt="" class="roadmap-item__circle absolute">
-				</div>
-				<div class="roadmap-item relative">
-					<div class="roadmap-item__text">
-						Q1 2022
-						<h3 class="h3 roadmap-item__h3">Community DAO</h3>
-						<div class="paragraphs">
-							Diam vestibulum mattis aliquam, urna condimentum id. Ultrices sit tincidunt diam integer amet, nec
-							facilisis nec mi. Faucibus posuere turpis commodo leo ipsum magnis.</div>
-					</div>
-					<img src="img/big-pink-circle.png" alt="" class="roadmap-item__circle absolute">
-				</div>
-				<div class="roadmap-item relative">
-					<div class="roadmap-item__text">
-						Q1 2022
-						<h3 class="h3 roadmap-item__h3">Community DAO</h3>
-						<div class="paragraphs">
-							Diam vestibulum mattis aliquam, urna condimentum id. Ultrices sit tincidunt diam integer amet, nec
-							facilisis nec mi. Faucibus posuere turpis commodo leo ipsum magnis.</div>
-					</div>
-					<img src="img/big-pink-circle.png" alt="" class="roadmap-item__circle absolute">
+					<img src="img/roadmap-3.png" alt="" class="roadmap-item__couple absolute">
 				</div>
 			</div>
+			<img src="img/wave-pink-top.png" alt="" class="wave wave--content">
 		</section>
 	</main>
 	@@include('html/footer.html',{})
