style: add footer

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,1 +1,40 @@
-<footer></footer>
+<footer class="footer relative">
+  <div class="wrapper">
+    <img src="img/wave-lavender.png" alt="" class="wave wave--team">
+    <img src="img/pattern-3.png" alt="" class="absolute footer__pattern">
+    <div class="container">
+      <div class="flex sb relative">
+        <div class="line footer__line"></div>
+        <div class="footer__left-column">
+          <h2 class="h2 footer__h2">Follow us on</h2>
+          <ul class="footer__list">
+            <li class="footer__list-item"><a href="" class="footer__link">Discord</a></li>
+            <li class="footer__list-item"><a href="" class="footer__link">Twitter</a></li>
+            <li class="footer__list-item"><a href="" class="footer__link">Instagram</a></li>
+            <li class="footer__list-item"><a href="" class="footer__link">Facebook</a></li>
+          </ul>
+        </div>
+        <div class="footer__right-column">
+          <ul class="footer__nav">
+            <div class="relative"> <img src="img/section-circle-lavender.png" alt="" class="circle circle--footer">
+              <li class="menu-text content-section__text footer__nav-item">Navigation</li>
+            </div>
+
+            <li class="footer__nav-item">
+              <a href="" class="footer__link">Home</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="" class="footer__link">Style Guide</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="" class="footer__link">Licenses</a>
+            </li>
+            <li class="footer__nav-item">
+              <a href="" class="footer__link">Changelog</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
