refactor: convert typography to vw

--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,21 @@
 	@@include('html/header.html',{})
 	<main>
 		<section class="main relative">
-			<div class="relative"> <img src="img/section-circle-brown.png" alt="" class="circle circle--center">
-				<div class="menu-text margin-auto content-section__text">NFT
-					Collection</div>
+			<div class="container">
+				<div class="relative"> <img src="img/section-circle-brown.png" alt="" class="circle circle--main">
+					<div class="menu-text margin-auto content-section__text">NFT
+						Collection</div>
+				</div>
+				<h1 class="h1">Bored <br>NFT Peeps</h1>
+				<p class="paragraphs main__text">Tempor interdum sed nisl aliquam ut orci feugiat neque. Nibh amet proin in
+					tristique. Ipsum
+					morbi adipiscing faucibus eu odio in tellus risus.</p>
+				<a href="" class="btn">OpenSea</a>
 			</div>
-			<h1 class="h1">Bored <br>NFT Peeps</h1>
-			<p class="paragraphs main__text">Tempor interdum sed nisl aliquam ut orci feugiat neque. Nibh amet proin in
-				tristique. Ipsum
-				morbi adipiscing faucibus eu odio in tellus risus.</p>
-			<a href="" class="btn">OpenSea</a>
+
 			<img src="img/big-circle-left.png" alt="" class="absolute  main__circle-left">
 			<img src="img/main-1.png " alt="" class="absolute  main__hero-left">
+
 			<img src="img/pattern-1.png" alt="" class="absolute  main__pattern-left">
 			<img src="img/big-circle-right.png" alt="" class="absolute  main__circle-right">
 			<img src="img/main-2.png " alt="" class="absolute  main__hero-right">
