--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,8 @@
 						<div class="meet-section__text">
 							<h4 class="subtitle">
 								6500 Bored Peeps</h4>
-							<p class="paragraphs meet-section__paragraphs">Tempor interdum sed nisl aliquam ut orci feugiat neque. Nibh
+							<p class="paragraphs meet-section__paragraphs">Tempor interdum sed nisl aliquam ut orci feugiat neque.
+								Nibh
 								amet proin in tristique.
 								Ipsum morbi adipiscing faucibus eu odio in tellus risus.</p>
 							<div class="line meet-section__line"></div>
@@ -273,11 +274,12 @@
 			<section class="team-section relative">
 				<img src="img/wave-pink-top.png" alt="" loading="lazy" class="wave wave--team">
 				<div class="container">
-					<div class="relative"> <img src="img/section-circle-pink.png" alt="" loading="lazy" class="circle circle--faq">
+					<div class="relative"> <img src="img/section-circle-pink.png" alt="" loading="lazy"
+							class="circle circle--faq">
 						<div class="menu-text margin-auto content-section__text">Team</div>
 					</div>
 					<h2 class="h2 tac">Meet Our Team</h2>
-					<div class="flex sb team-section__space">
+					<div class="flex sb wrap team-section__space">
 						<div class="team-section__member">
 							<img src="img/team-1.png" alt="" loading="lazy">
 							<div class="team-section__position">CEO</div>
@@ -293,8 +295,6 @@
 							<div class="team-section__position">Developer</div>
 							<div class="h3">John</div>
 						</div>
-					</div>
-					<div class="flex sb">
 						<div class="team-section__member">
 							<img src="img/team-4.png" alt="" loading="lazy">
 							<div class="team-section__position">Designer</div>
@@ -311,6 +311,9 @@
 							<div class="h3">Katty</div>
 						</div>
 					</div>
+
+
+
 				</div>
 				<img src="img/wave-pink-bottom.png" alt="" loading="lazy" class="wave wave--content">
 			</section>
